--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Street-Fighter</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="warlord-helmet.png" type="image/x-icon">
 </head>
 <body>
   <div id="container">
@@ -12,33 +13,25 @@
         <h1>Street-Fighter</h1>
     </header>
     <main>
-        <div style="position:absolute; display: flex; width: 100%; align-items: center; padding: 20px;">
+        <div id="posHP">
 
             <!-- Player A HP -->
-            <div style="position:relative; height: 30px; width: 100%; display: flex; justify-content: flex-end;">
-                <div style="background-color: grey; height: 30px; width: 100%"></div>
-                <div id="playerHealth"
-                    style="position:absolute; background-color: red; top: 0; right: 0; bottom: 0; width: 100%;">
-                </div>
+            <div id="playerone">
+                <div id="player1"></div>
+                <div id="playerHealth"></div>
             </div>
 
             <!-- Timer -->
-            <div id="timer"
-                style="background-color: yellow; height: 30px; width: 150px; flex-shrink: 0; display: flex; align-items: center; justify-content: center;">
-                10
-            </div>
+            <div id="timer"> </div>
 
             <!-- Player B HP -->
-            <div style="position:relative; height: 30px; width: 100%">
-                <div style="background-color: grey; height: 30px; width: 100%"></div>
-                <div id="enemyHealth"
-                    style="position:absolute; background-color: blue; top: 0; right: 0; bottom: 0; left: 0;"></div>
+            <div id="playertwo">
+                <div id="player2" ></div>
+                <div id="enemyHealth"></div>
             </div>
 
         </div>
-        <div id="displayText"
-            style="position: absolute; color: black; align-items: center; justify-content: center; top: 0; right: 0; bottom: 0; left: 0; display: none;">
-        </div>
+        <div id="displayText"></div>
         <canvas></canvas>
     </main>
     <footer>
