--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         integrity="sha512-gsEItzcNkWxfxHjr4BaEZAd9YuRWYjxnj7c/yukcZ0/nWehUb5TjJNyyv1ApCU2DFH/qgw+stFZHPOKnoQnIuQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="js/jquery-3.6.0.js"defer></script>
-    <script src="js/utils.js" defer></script>
-    <script src="js/classes.js"defer></script>
+    <!-- <script src="js/jquery-3.6.0.js"defer></script> -->
+    <script src="js/utils.js" ></script>
+    <script src="js/classes.js"></script>
     <script src="index.js" defer></script>
 
 </head>
