Musik-Bug behoben

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- <script src="js/jquery-3.6.0.js"defer></script> -->
-    <script src="js/utils.js" ></script>
-    <script src="js/classes.js"></script>
+    <script src="js/utils.js" defer></script>
+    <script src="js/classes.js" defer></script>
     <script src="index.js" defer></script>
 
 </head>
@@ -48,14 +48,14 @@
 
             <canvas> </canvas>
 
-            <audio id="audiofile" preload="auto" muted>
-                <source src="Breath_of_Fire.ogg" />
+            <audio id="audiofile" preload="auto" >
+                <source src="/music/Breath_of_Fire.ogg" />
             </audio>
 
             <audio id="audiowin" preload="auto">
-                <source src="win.ogg" />
+                <source src="/music/win.ogg" />
             </audio>
-            <!-- <button id="btnaudio" onclick="play()"></button> -->
+
         </main>
 
         <footer>
