--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- <script src="js/jquery-3.6.0.js"defer></script> -->
-    <script src="js/utils.js" defer></script>
-    <script src="js/classes.js" defer></script>
+    <script src="js/utils.js" ></script>
+    <script src="js/classes.js" ></script>
     <script src="index.js" defer></script>
 
 </head>
