--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         integrity="sha512-gsEItzcNkWxfxHjr4BaEZAd9YuRWYjxnj7c/yukcZ0/nWehUb5TjJNyyv1ApCU2DFH/qgw+stFZHPOKnoQnIuQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <!-- <script src="js/jquery-3.6.0.js"defer></script> -->
     <script src="js/utils.js" ></script>
     <script src="js/classes.js" ></script>
     <script src="index.js" defer></script>
@@ -50,11 +49,11 @@
             <canvas> </canvas>
 
             <audio id="audiofile" preload="auto">
-                <source src="/music/Breath_of_Fire.ogg" />
+                <source src="music/Breath_of_Fire.ogg" />
             </audio>
 
             <audio id="audiowin" preload="auto">
-                <source src="/music/win.ogg" />
+                <source src="music/win.ogg" />
             </audio>
 
         </main>
